hphp/test/zend/bad/ext/date/tests/bug53437_var1.php
<?php
$s = 'O:10:"DatePeriod":0:{}';

$dp = unserialize($s);

var_dump($dp);
?>
==DONE==